tests/machine/x/php/values_builtin.php
<?php
$m = ["a" => 1, "b" => 2, "c" => 3];
_print(values($m));
function _print(...$args) {
    $parts = [];
    foreach ($args as $a) {
        if (is_array($a) || is_object($a)) {
            $parts[] = json_encode($a);
        } else {
            $parts[] = strval($a);
        }
    }
    echo implode(' ', $parts), PHP_EOL;
}
